# Automatic-Music-Transcription

./: README.md  app.py  main.py  pyproject.toml
backend/: app.py  pyproject.toml
backend/screens/: __init__.py  login.py
backend/utils/: __init__.py  connection_functions.py  connection_renewal_wrapper.py  hash_function.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: Login.tsx
utils/: connection_renewal_wrapper.py  determine_note_function.py  tab_nodes.py
