[project]
name = "automatic-music-transcription"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "active>=0.0.5a0",
    "flask>=3.1.3",
    "mysql>=0.0.3",
    "mysql-connector>=2.2.9",
    "mysql-connector-python>=9.7.0",
    "ruff>=0.15.21",
]
